--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,22 @@
     background-color: #e63946;
 }
 
-
+a{
+    align-items: center;
+    text-decoration: none;
+    padding: 9px;
+    color: white;
+    border-radius: 5px;
+    background: #0d6efd;
+    cursor: pointer;
+    position: relative;
+    top: -54px;
+    left: 200px;
+}
+a:hover{
+    transition: .5s;    
+    background: #0b5ed7
+}
 
 
 
